Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126690

Creating dynamic properties and reparenting a Control break bindings on Singletons

    XMLWordPrintable

Details

    • 7782f1b48 (dev), 073243256 (dev), 17938255b (6.8), db19e2b9d (6.8), d5b739894 (6.7), d377d7fee (6.7)

    Description

      Creating dynamic properties and reparenting a Control break bindings on Singletons

      This issue affects Qt Design Studio.

      I attached a minimal example to reproduce the issue.

      Generating multiple dynamic items on the root item and reparenting a control (Button) triggers the issue. A relatively simple expression cannot be resolved anymore.

      with importing/creating/reparenting a control, I could not reproduce the issue.

      The debug build triggers an assert which might help and a release build shows the error.

      I added two booleans to document what triggers the issue.
      No reporting the Button or not creating the extra property will "fix" the issue.

      So far all Qt version I tried triggered the same issue.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-126690
          # Subject Branch Project Status CR V

          Activity

            People

              tjenssen Tim Jenssen
              thohartm Thomas Hartmann
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: